--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "deploy": "firebase deploy"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.29.0",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@types/qrcode": "^1.5.5",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,6 +24,7 @@
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
